// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Desktop CleverPriceBanner renders 1`] = `
<div>
  <div>
    <div
      class="trigger"
    >
      <img
        alt="CleverPrice banner"
        class="banner"
        src="CleverPriceBanner.png"
      />
    </div>
  </div>
</div>
`;

exports[`Desktop CleverPriceBanner renders 2`] = `
<div>
  <div>
    <div
      class="trigger"
    >
      <img
        alt="CleverPrice banner"
        class="banner"
        src="CleverPriceBanner.png"
      />
    </div>
  </div>
</div>
`;

exports[`Mobile CleverPriceBanner renders 1`] = `
<div>
  <div>
    <div
      class="trigger"
    >
      <img
        alt="CleverPrice banner"
        class="banner"
        src="CleverPriceBannerMobile.png"
      />
    </div>
  </div>
</div>
`;

exports[`Mobile CleverPriceBanner renders 2`] = `
<div>
  <div>
    <div
      class="trigger"
    >
      <img
        alt="CleverPrice banner"
        class="banner"
        src="CleverPriceBannerMobile.png"
      />
    </div>
  </div>
</div>
`;
